Bug 886903 - Send correct UserAgent data for content process. r=jdm